add basic ui to home(login) page

--- a/public/project/views/login.html
+++ b/public/project/views/login.html
@@ -1,17 +1,76 @@
-
-<!-- HTTPS required. HTTP will give a 403 forbidden response -->
 <script src="https://sdk.accountkit.com/en_US/sdk.js"></script>
+<div class="overlay-navigation">
+    <nav id="h" role="navigation">
+        <ul>
+            <!--<li><a href="#/home" data-content="The beginning">Home</a></li>-->
+            <li>
+                <a href="#" data-content="Curious?">
+                    <input id="country_code" style="display: none"/>
+                    <input placeholder="phone number" id="phone_number" style="display: none"/>
+                    <p ng-click="model.smsLogin();">Login via SMS</p>
+                </a>
+            </li>
+            <li>
+                <a href="#" data-content="Wanna Try?">
+                    <input placeholder="email" id="email" style="display: none"/>
+                    <p ng-click="model.emailLogin();">Login via Email</p>
+                </a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
-<title>AccountKitJS App</title>
+<section class="home">
+    <div class="open-overlay">
+        <span class="bar-top"></span>
+        <span class="bar-middle"></span>
+        <span class="bar-bottom"></span>
+    </div>
+</section>
 
+<section class="doc1">
+    <a class="semi-transparent-button" href="https://developers.facebook.com/docs/accountkit">AcccountKit Doc</a>
+</section>
 
-<body>
-<input value="+1" id="country_code" />
-<input placeholder="phone number" id="phone_number"/>
-<button ng-click="model.smsLogin();">Login via SMS</button>
-<div>OR</div>
-<input placeholder="email" id="email"/>
-<button ng-click="model.emailLogin();">Login via Email</button>
+<section class="doc2">
+    <a class="semi-transparent-button" href="https://github.com/Saikioffcampus/hack-in-sf">Demo Source Code</a>
+</section>
 
+<script>
+    $('.open-overlay').click(function() {
+        var overlay_navigation = $('.overlay-navigation'),
+                nav_item_1 = $('nav li:nth-of-type(1)'),
+                nav_item_2 = $('nav li:nth-of-type(2)'),
+                <!--nav_item_3 = $('nav li:nth-of-type(3)'),-->
+                <!--nav_item_4 = $('nav li:nth-of-type(4)'),-->
+                <!--nav_item_5 = $('nav li:nth-of-type(5)'),-->
+                top_bar = $('.bar-top'),
+                middle_bar = $('.bar-middle'),
+                bottom_bar = $('.bar-bottom');
 
-</body>
+        overlay_navigation.toggleClass('overlay-active');
+        if (overlay_navigation.hasClass('overlay-active')) {
+
+            top_bar.removeClass('animate-out-top-bar').addClass('animate-top-bar');
+            middle_bar.removeClass('animate-out-middle-bar').addClass('animate-middle-bar');
+            bottom_bar.removeClass('animate-out-bottom-bar').addClass('animate-bottom-bar');
+            overlay_navigation.removeClass('overlay-slide-up').addClass('overlay-slide-down')
+            nav_item_1.removeClass('slide-in-nav-item-reverse').addClass('slide-in-nav-item');
+            nav_item_2.removeClass('slide-in-nav-item-delay-1-reverse').addClass('slide-in-nav-item-delay-1');
+            <!--nav_item_3.removeClass('slide-in-nav-item-delay-2-reverse').addClass('slide-in-nav-item-delay-2');-->
+            <!--nav_item_4.removeClass('slide-in-nav-item-delay-3-reverse').addClass('slide-in-nav-item-delay-3');-->
+            <!--nav_item_5.removeClass('slide-in-nav-item-delay-4-reverse').addClass('slide-in-nav-item-delay-4');-->
+        } else {
+            top_bar.removeClass('animate-top-bar').addClass('animate-out-top-bar');
+            middle_bar.removeClass('animate-middle-bar').addClass('animate-out-middle-bar');
+            bottom_bar.removeClass('animate-bottom-bar').addClass('animate-out-bottom-bar');
+            overlay_navigation.removeClass('overlay-slide-down').addClass('overlay-slide-up')
+            nav_item_1.removeClass('slide-in-nav-item').addClass('slide-in-nav-item-reverse');
+            nav_item_2.removeClass('slide-in-nav-item-delay-1').addClass('slide-in-nav-item-delay-1-reverse');
+            <!--nav_item_3.removeClass('slide-in-nav-item-delay-2').addClass('slide-in-nav-item-delay-2-reverse');-->
+            <!--nav_item_4.removeClass('slide-in-nav-item-delay-3').addClass('slide-in-nav-item-delay-3-reverse');-->
+            <!--nav_item_5.removeClass('slide-in-nav-item-delay-4').addClass('slide-in-nav-item-delay-4-reverse');-->
+        }
+    })
+
+</script>
