--- a/public/project/views/login_success.html
+++ b/public/project/views/login_success.html
@@ -1,5 +1,7 @@
-
-<body>
-<div>Welcome!</div>
-
-</body>
+<section class="banner">
+    <!--<div class="open-overlay">-->
+        <!--<span class="bar-top"></span>-->
+        <!--<span class="bar-middle"></span>-->
+        <!--<span class="bar-bottom"></span>-->
+    <!--</div>-->
+</section>
