--- a/public/project/views/login_success.html
+++ b/public/project/views/login_success.html
@@ -1,7 +1,12 @@
-<section class="banner">
-    <!--<div class="open-overlay">-->
-        <!--<span class="bar-top"></span>-->
-        <!--<span class="bar-middle"></span>-->
-        <!--<span class="bar-bottom"></span>-->
+<section class="wanna-comment">
+    <!--<div class="ask-comment">-->
+        <!--Hey User({{model.currentUser.phone_num || model.currentUser.email}}), why not leave a comment on Account Kit?-->
     <!--</div>-->
+
+</section>
+
+<section class="comment-button-box">
+    <a class="semi-transparent-button is-pink" href="#">
+        Hey User({{model.currentUser.phone_num || model.currentUser.email}}), why not leave a comment on Account Kit?
+    </a>
 </section>
