--- a/public/project/views/login_success.html
+++ b/public/project/views/login_success.html
@@ -6,7 +6,7 @@
 </section>
 
 <section class="comment-button-box">
-    <a class="semi-transparent-button is-pink" href="#">
+    <a class="semi-transparent-button is-pink" href="#/feedback">
         Hey User({{model.currentUser.phone_num || model.currentUser.email}}), why not leave a comment on Account Kit?
     </a>
 </section>
