--- a/public/project/css/home.css
+++ b/public/project/css/home.css
@@ -1,14 +1,38 @@
 @import url(https://fonts.googleapis.com/css?family=Work+Sans:400,300,700|Open+Sans:400italic,300italic);
 
+body {
+    /*min-height: 1000px;*/
+    min-height: 75rem;
+    padding-top: 70px;
+}
 
-.home {
+input.form-control {
+    margin-bottom: 5px;
+}
+
+.wanna-comment {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-image: url(https://venturebeat.com/wp-content/uploads/2015/09/facebook-app-iphone-ios.jpg?fit=930%2C488&strip=all);
+    background-image: url('http://1079638729.rsc.cdn77.org/pic/v2/gallery/preview/fon-logotipy-yumor-16085.jpg');
     background-size: cover;
     background-position: center center;
     margin-top: -70px;
+}
+
+
+.comment-button-box {
+    position: fixed;
+    z-index: 20;
+    top: 80%;
+    left: 5%;
+    width: 100%;
+    height: 100%;
+}
+
+#image{
+    display:block;
+    width:100%;
 }
 
 .doc1 {
@@ -28,10 +52,6 @@
     width: 220px;
     height: 100%;
 }
-
-/* ====================================
-Button
-==================================== */
 
 .semi-transparent-button {
   display: block;
@@ -72,10 +92,30 @@ Button
   color: #000;
 }
 
+.home {
+    width: 100%;
+    height: 100vh;
+    position: relative;
+    background-image: url(https://venturebeat.com/wp-content/uploads/2015/09/facebook-app-iphone-ios.jpg?fit=930%2C488&strip=all);
+    background-size: cover;
+    background-position: center center;
+    margin-top: -70px;
+}
 
-/* ====================================
-Navigation
-==================================== */
+.home a{
+    font-family: "Work Sans", sans-serif;
+    color: #fff;
+    font-weight: 300;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+    position: absolute;
+    z-index: 10;
+    top:50px;
+    left:50px;
+    padding-bottom: 3px;
+    border-bottom: 1px solid #fff;
+}
 
 .overlay-navigation {
     position: fixed;
@@ -100,24 +140,16 @@ Navigation
 
 #h,
 #h ul {
-    width: 100%;
     height: 100%;
-    margin: 0;
     padding: 0;
 }
 
 #h ul {
     display: flex;
-    list-style: none;
 }
 
 #h ul li {
     flex-basis: 25%;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    overflow: hidden;
-    transform: translateY(-100%);
 }
 
 #h li a {
@@ -125,110 +157,27 @@ Navigation
     top: 46%;
     color: #fff;
     text-transform: uppercase;
-    font-family: 'Work sans', sans-serif;
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-weight: 300;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
     text-decoration: none;
     display: block;
     text-align: center;
-    font-size: 0.9rem;
+    font-size: 1.2rem;
 }
 
-#h li a:before {
-    content: '';
-    width: 70px;
-    height: 2px;
-    background-color: #fff;
-    position: absolute;
-    top: 50%;
-    left: 0;
-    z-index: 100;
-    transform: translateX(-100%);
-    opacity: 0;
-    transition: all .2s linear;
+#h li:nth-of-type(2){
+    background-color: #4165c1
 }
-
-#h li a:after {
-    content: attr(data-content);
-    font-size: 0.7rem;
-    transition: all .2s linear;
-    opacity: 0;
-    position: absolute;
-    z-index: 100;
-    color: #fff;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    left: 0;
-    right: 0;
-    bottom: -50px;
-    text-transform: none;
-    font-family: 'Open sans', serif;
-    font-weight: 300;
-    font-style: italic;
-    letter-spacing: 0;
-}
-
-#h li a:hover:before {
-    transform: translateX(0);
-    opacity: 1;
-}
-
-#h li a:hover:after {
-    transform: translateY(15px);
-    opacity: 1;
-}
-
-/*#h li:nth-of-type(1){background-color: #5a696f}*/
-#h li:nth-of-type(2){background-color: #4165c1}
-#h li:nth-of-type(3){background-color: #F4837D}
-#h li:nth-of-type(4){background-color: #FDCEA9}
-#h li:nth-of-type(5){background-color: #99B998}
 
 .slide-in-nav-item {
-    animation: slide-in-nav-item 0.4s linear 1 .2s both;
-}
-
-.slide-in-nav-item-delay-1 {
-    animation: slide-in-nav-item 0.4s linear 1 .4s both;
-}
-
-.slide-in-nav-item-delay-2 {
-    animation: slide-in-nav-item 0.4s linear 1 .6s both;
-}
-
-.slide-in-nav-item-delay-3 {
-    animation: slide-in-nav-item 0.4s linear 1 .8s both;
-}
-
-.slide-in-nav-item-delay-4 {
-    animation: slide-in-nav-item 0.4s linear 1 1s both;
+    animation: slide-in-nav-item 0.4s linear 1 .3s both;
 }
 
 .slide-in-nav-item-reverse {
     animation: slide-in-nav-item-reverse .3s linear 1 .5s both;
 }
 
-.slide-in-nav-item-delay-1-reverse {
-    animation: slide-in-nav-item-reverse .3s linear 1 .4s both;
-}
-
-.slide-in-nav-item-delay-2-reverse {
-    animation: slide-in-nav-item-reverse .3s linear 1 .3s both;
-}
-
-.slide-in-nav-item-delay-3-reverse {
-    animation: slide-in-nav-item-reverse .3s linear 1 .2s both;
-}
-
-.slide-in-nav-item-delay-4-reverse {
-    animation: slide-in-nav-item-reverse .3s linear 1 both;
-}
-
-
-/* ====================================
-Burger king
-==================================== */
 
 .open-overlay {
     position: absolute;
@@ -247,35 +196,6 @@ Burger king
     cursor: pointer;
     margin-top: 8px;
 }
-
-.animate-top-bar {
-    animation: animate-top-bar .6s linear 1 both
-}
-
-.animate-bottom-bar {
-    animation: animate-bottom-bar .6s linear 1 both
-}
-
-.animate-middle-bar {
-    animation: animate-middle-bar .6s linear 1 both
-}
-
-.animate-out-top-bar {
-    animation: animate-out-top-bar .6s linear 1 both
-}
-
-.animate-out-bottom-bar {
-    animation: animate-out-bottom-bar .6s linear 1 both
-}
-
-.animate-out-middle-bar {
-    animation: animate-out-middle-bar .6s linear 1 both
-}
-
-
-/* ====================================
-Animation keyframes
-==================================== */
 
 @keyframes slide-in-nav-item {
     from {
@@ -299,134 +219,3 @@ Animation keyframes
     }
 }
 
-@keyframes animate-top-bar {
-    0% {
-        background-color: #fff;
-    }
-    50% {
-        -webkit-transform: translateY(9px);
-        transform: translateY(9px)
-    }
-    80% {
-        -webkit-transform: translateY(5px);
-        transform: translateY(5px);
-        background-color: #fff
-    }
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        background-color: #29363B;
-    }
-}
-
-@keyframes animate-bottom-bar {
-    0% {
-        background-color: #fff;
-    }
-    50% {
-        -webkit-transform: translateY(-9px);
-        transform: translateY(-9px)
-    }
-    80% {
-        -webkit-transform: translateY(-5px);
-        transform: translateY(-5px);
-        background-color: #fff;
-    }
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        background-color: #29363B;
-    }
-}
-
-@keyframes animate-middle-bar {
-    0% {
-        background-color: #fff;
-    }
-    80% {
-        background-color: #fff;
-    }
-    100% {
-        background-color: #29363B;
-    }
-}
-
-@keyframes animate-out-top-bar {
-    0% {
-        background-color: #29363B
-    }
-    50% {
-        -webkit-transform: translateY(9px);
-        transform: translateY(9px)
-    }
-    80% {
-        -webkit-transform: translateY(5px);
-        transform: translateY(5px);
-        background-color: #29363B
-    }
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        background-color: #FFF;
-    }
-}
-
-@keyframes animate-out-bottom-bar {
-    0% {
-        background-color: #29363B
-    }
-    50% {
-        -webkit-transform: translateY(-9px);
-        transform: translateY(-9px)
-    }
-    80% {
-        -webkit-transform: translateY(-5px);
-        transform: translateY(-5px);
-        background-color: #29363B;
-    }
-    100% {
-        -webkit-transform: translateY(0);
-        transform: translateY(0);
-        background-color: #FFF;
-    }
-}
-
-@keyframes animate-out-middle-bar {
-    0% {
-        background-color: #29363B
-    }
-    80% {
-        background-color: #29363B;
-    }
-    100% {
-        background-color: #fff;
-    }
-}
-.home a{
-    font-family: "Work Sans", sans-serif;
-    color: #fff;
-    font-weight: 300;
-    font-size: 12px;
-    text-transform: uppercase;
-    text-decoration: none;
-    position: absolute;
-    z-index: 10;
-    top:50px;
-    left:50px;
-    padding-bottom: 3px;
-    border-bottom: 1px solid #fff;
-}
-@media (max-width: 640px) {
-    #h ul li a {
-        font-size: 11px;
-    }
-    #h li a:after {
-        font-size: 0.6rem;
-    }
-    .open-overlay {
-        right: 1rem;
-    }
-    #h li a:before {
-        width: 15px;
-    }
-}
